[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-cli-tools"
version = "0.1.0"
description = "Small CLI tools for Jira and Confluence."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Rick Williams" }
]
dependencies = []

[project.scripts]
tjira = "atlassian_cli.jira_cli:main"
tconf = "atlassian_cli.confluence_cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["atlassian_cli*"]
